<resources>
    <string name="app_name">工程模式</string>
    <string name="phone_info">话机信息</string>
    <string name="hardware_test">硬件测试</string>
    <string name="cell_data">蜂房资料</string>
    <string name="near_cell">临近小区</string>
    <string name="standby_info">待机信息</string>
    <string name="dedi_info">Dedi信息</string>
    <string name="gprs_info">GPRS信息</string>
    <string name="battary_info">电池信息</string>
    <string name="gps_test">GPS测试</string>
    <string name="autotest">自动测试</string>
    <string name="keylight">按键灯</string>
    <string name="bluetooth">蓝牙</string>
    <string name="keystroke">按键</string>
    <string name="indicator">指示灯</string>
    <string name="nand">NAND</string>
    <string name="lcd">LCD</string>
    <string name="touchsrceen">触摸屏</string>
    <string name="usbmode">USB模式</string>
    <string name="audio">音频</string>
    <string name="sdcard">存储卡</string>
    <string name="backlight">背光灯</string>
    <string name="vibrate">振动</string>
    <string name="camera">摄像头</string>
    <string name="fm">FM</string>
    <string name="start_test">开始测试</string>
    <string name="vibrator">振动</string>
    <string name="vibrator_testing">振动测试中</string>
    <string name="vibrator_end">振动完毕</string>
    <string name="next">下 一 项</string>
    <string name="previous">上 一 项</string>
    <string name="exit">退 出</string>
    <string name="hello">Hello World, SmallTest!</string>
    <string name="gsm">[BT]Board Test</string>
    <string name="td">[FT]Final Test</string>
    <string name="keystroke_tips">"按键测试中
请按以下的按键："</string>
    <string name="keystroke_success">按键测试完成</string>
    <string name="auto_start">开始</string>
    <string name="audio_shouhuaqi">受话器</string>
    <string name="audio_yangshengqi">扬声器</string>
    <string name="audio_yinpinhuilu">音频回路</string>
    <string name="audio_luyin">录音</string>
    <string name="ligthStrong_hight">高亮度</string>
    <string name="lightStrong_middle">中亮度</string>
    <string name="lightString_low">低亮度</string>
    <string name="backlighttesting">背光灯测试中</string>
    <string name="phoneInfo_productModel">产品型号:</string>
    <string name="phoneInfo_softwareVersion">软件版本号:</string>
    <string name="phoneInfo_BT">BT[Board Test]:</string>
    <string name="phoneInfo_FT">FT[Final Test]:</string>
    <string name="phoneInfo_platformVersion">固件版本:</string>
    <string name="phoneInfo_kernelVersion">内核版本:</string>
    <string name="phoneInfo_IMEI">IMEI:</string>
    <string name="phoneInfo_hardwareVersion">硬件版本:</string>
    <string name="phoneInfo_baseband">基带版本:</string>
    <string name="phoneInfo_engineerModeVersion">工程模式版本号:</string>
    <string name="recording">录音中</string>
    <string name="record_second">秒</string>
    <string name="record_playback">回放中</string>
    <string name="record_startplayback">开始回放</string>
    <string name="yangshengqitesting">扬声器测试中</string>
    <string name="yinpinhuilu_headset">耳机</string>
    <string name="yinpinhuilu_phone">手机</string>
    <string name="yinpinhuilu_testing">音频回路测试中</string>
    <string name="bluetooth_opending">蓝牙正在打开中</string>
    <string name="bluetooth_opended">蓝牙已经打开</string>
    <string name="bluetooth_closed">蓝牙已经关闭</string>
    <string name="celldata_cannotget">无法取得</string>
    <string name="nand_flash">1. Nand Flash 格式化</string>
    <string name="nand_copy">2. Nand 出厂拷贝</string>
    <string name="nand_filesystem">3. 文件系统格式化</string>
    <string name="sdcard_writing">正在往SDCARD写入数据</string>
    <string name="sdcard_playing">写入成功，正在播放</string>
    <string name="sdcard_nosdcard">请插入SDCARD测试</string>
    <string name="sdcard_write_error">写入SD卡的时候出现错误</string>
    <string name="shouhuaqi_tingtong">听筒</string>
    <string name="shouhuaqi_mianti">免提</string>
    <string name="gongxujiancha">工序检查</string>
    <string name="yangshengqi">扬声器</string>
    <string name="yinpinhuilu">音频回路</string>
    <string name="shouhuaqi_testing_xml">受话器测试中</string>
    <string name="batteryPower">电池电量:</string>
    <string name="batteryState">状态:</string>
    <string name="bluetoothaddress">蓝牙地址：</string>
    <string name="playtime">播放时长：</string>
    <string name="min">分钟</string>
    <string name="sperTime">间隔时长:</string>
    <string name="circleTime">循环次数:</string>
    <string name="playsongs">播放曲目：</string>
    <string name="selectsong">选择曲目</string>
    <string name="buttonlight_testing">按键灯测试中</string>
    <string name="buttonlight_tips">"请观察屏幕下方的按键灯
是否亮暗闪烁"</string>
    <string name="indicator_testing">指示灯测试中</string>
    <string name="indicator_tips">"请观察屏幕上方的指示灯
是否红绿双色变换"</string>
    <string name="indicator_tips_2">请观察指示灯是否一闪一闪</string>
    <string name="wifi">WIFI</string>
    <string name="cmmb">手机电视</string>
    <string name="Sensors">Sensors</string>
    <string name="sensors">传感器</string>
    <string name="lsensor">光传感器</string>
    <string name="gsensor">重力传感器</string>
    <string name="psensor">接近传感器</string>
    <string name="compass">地磁传感器</string>
    <string name="signalStrength">信号强度:</string>
    <string name="hardVersion">硬件版本:</string>
    <string name="baseband">基带版本:</string>
    <string name="subCamera">副摄像头</string>
    <string name="subCamera_success">副摄像头测试完毕</string>
    <string name="audio_oldtest_earpiece">受话器老化</string>
    <string name="audio_oldtest_speaker">扬声器老化</string>
    <string name="receiver_test_success">受话器老化测试成功完成</string>
    <string name="receiver_test_fail">受话器老化测试播放器出错</string>
    <string name="speaker_test_success">扬声器老化测试成功完成</string>
    <string name="speaker_test_fail">扬声器老化测试播放器出错</string>
    <string name="long_time">2</string>
    <string name="period_time">1</string>
    <string name="nearcell_info">\# ARFCN RX Lev</string>
    <string name="number_three">3</string>
    <string name="number_one">1</string>
    <string name="number_zero">0</string>
    <string name="dateFormate">yyyy-MM-dd HH:mm:ss</string>
    <string name="earpiece_playtime">130</string>
    <string name="earpiece_speartime">2</string>
    <string name="oldtest_exit">后台运行</string>
    <string name="earpiece_oldtesting">受话器老化测试中</string>
    <string name="speak_playtimes">持续播放时间(小时):</string>
    <string name="speak_speartimes">间隔时间(秒):</string>
    <string name="bt_speak_ok">确定</string>
    <string name="speak_default_playtime">130</string>
    <string name="speak_default_speartime">1</string>
    <string name="speaker_oldtesting">扬声器老化测试中</string>
    <string name="no_sim_card">请插入SIM卡,再进行此项测试!</string>
    <string name="hook">耳机挂机键有效</string>
    <string name="insert_headset">请插入耳机</string>
    <string name="sensonr_message_show">"请用手挡住接近传感器,
值会发生变化"</string>
    <string name="before_insert_headset">开始耳机测试前，请先插入耳机</string>
    <string name="headset_testing">"耳机测试中
请对着耳机的麦克风说话"</string>
    <string name="gps_fail">GPS测试失败</string>
    <string name="gps_pass">完成</string>
    <string name="gps_test_success">GPS测试通过</string>
    <string name="testing">GPS测试中</string>
    <string name="gps_btn">GPS</string>
    <string name="gps_prn">卫星序号：</string>
    <string name="gps_snr">卫星SNR:</string>
    <string name="gps_auto_exit">120</string>
    <string name="alertdialog">请按屏幕下方中间的按钮返回桌面:</string>
    <string name="alert_title">请注意</string>
    <string name="speak_oldtest">扬声器老化测试中</string>
    <string name="autest_recording">录音中</string>
    <string name="autest_playrecord">播放录音中</string>
    <string name="min2earpiece">audhwtest -g</string>
    <string name="close_min2earpiece">audhwtest -m</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">充电中</string>
    <string name="battery_info_status_charging_ac">(AC模式)</string>
    <string name="battery_info_status_charging_usb">(USB模式)</string>
    <string name="battery_info_status_discharging">放电中</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">电量充满</string>
    <string name="retest">重测</string>
    <string name="proximity_value">接近值：</string>
    <string name="gravity_value">重力值：</string>
    <string name="light_value">亮度值：</string>
    <string name="compass_value">角度值：</string>
    <string name="please_input_a_number">请输入数字！</string>
    <string name="gps_test_effective_snr">最低有效SNR值：</string>
    <string name="gps_test_effective_satellites_count">最少有效卫星数：</string>
    <string name="gps_test_search_time">最长搜索时间：</string>
    <string name="gps_test_setting">测试设置</string>
    <string name="gps_test_setting_save_success">成功保存设置，需要退出现有测试，以使用新设置</string>
    <string name="minute">分钟</string>
    <string name="second">秒</string>
    <string name="bluetooth_found_device">"找到设备：
"</string>
    <string name="bluetooth_discovering">正在查找设备</string>
    <string name="bluetooth_success">蓝牙测试成功</string>
    <string name="bluetooth_fail">蓝牙测试失败</string>
    <string name="wifi_enabling">正在打开WIFI</string>
    <string name="wifi_enabled">WIFI已打开</string>
    <string name="wifi_scaning">正在搜索网络</string>
    <string name="wifi_success">WIFI测试成功</string>
    <string name="wifi_fail">WIFI测试失败</string>
    <string name="wifi_test">WIFI测试</string>
    <string name="wifi_found_network">找到网络：</string>
    <string name="cmmb_test_completed">手机电视测试完毕</string>
    <string name="camera_test_completed">摄像头测试完毕</string>
    <string name="opening_gps">正在打开GPS</string>
    <string name="closing_gps">正在关闭GPS</string>
    <string name="a_battery">主电池:</string>
    <string name="b_battery">备用电池:</string>
    <string name="gserner_show">请翻转屏幕方向，查看文字方向是否相应变换</string>
    <string name="FMtest">FM</string>
    <string name="press">点击</string>
    <string name="battery_info">其他信息:</string>
    <string name="pimc_a">pmic给主电池充电</string>
    <string name="pimc_b">pmic给备用电池充电</string>
    <string name="supply_a">主电池在供电</string>
    <string name="supply_b">备用电池在供电</string>
    <string name="supply_null">充电器在供电</string>
    <string name="internal_a">内部充电器给主电池充电</string>
    <string name="internal_b">内部充电器给备用电池充电</string>
    <string name="level_a">主电池电量百分比:</string>
    <string name="level_b">备用电池电量百分比:</string>
    <string name="voltage_a">主电池电压:</string>
    <string name="voltage_b">备用电池电压:</string>
    <string name="phone_storge">本机存储器</string>
    <string name="sd_storge">T卡</string>
    <string name="storge">存储</string>
    <string name="phone_writing">正在往本机存储器中写入数据</string>
    <string name="sd_writing">正在往T卡中写入数据</string>
    <string name="recCircuit">回路测试</string>
    <string name="recCircuit_tv">"正在进行回路测试
请对着Mic说话"</string>
    <string name="remove_headset">请移除耳机再进行测试</string>
    <string name="bt_ft">BT/FT:</string>
    <string name="build_type">Build Type:</string>
    <string name="take_picture">拍照</string>
    <string name="retake_picture">重拍</string>
    <string name="insert_sd_2take">请插入SD才能进行拍照测试</string>
    <string name="picture_save_ok">图片存储成功</string>
    <string name="picture_save_faile">图片存储失败</string>
    <string name="ap_release">AP版本:</string>
    <string name="temperature">电池温度:</string>
    <string name="flash_lisht_testing">闪光灯测试中。。。</string>
    <string name="flash_lisht">闪光灯</string>
    <string name="flash_lisht_end">闪光灯测试完毕</string>
    <string name="wifi_mac">WIFI_MAC:</string>
    <string name="hw_version">V1.0</string>
    <string name="sim_card">SIM卡</string>
    <string name="sim_state">SIM卡状态</string>
    <string name="sim_card1">SIM卡1:</string>
    <string name="sim_card2">SIM卡2:</string>
    <string name="sim_exist">已插入</string>
    <string name="sim_noexist">未插入</string>
    <string name="main_mic">主MIC</string>
    <string name="ref_mic">副MIC</string>
    <string name="blowing">请对着MIC吹气，并听受话器是否有发出声音</string>
    <string name="main_mictest">请对着主MIC说话，并听受话器是否有发出声音</string>
    <string name="list_light">灯</string>
    <string name="lcdtype">屏幕型号:</string>
    <string name="unknown">未知</string>
    <string name="Cameratype">Camera:</string>
    <string name="battery_a">主电池供电</string>
    <string name="battery_b">副电池供电</string>
    <string name="battery_auto">由系统供电</string>
</resources>