<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <Button android:id="@id/btnGps" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/gps_btn" android:layout_weight="1.0" />
        <Button android:id="@id/btnBluetooth" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/bluetooth" android:layout_weight="1.0" />
        <Button android:id="@id/btnWifi" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/wifi" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <Button android:id="@id/btnLcd" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/lcd" android:layout_weight="1.0" />
        <Button android:id="@id/btnAudio" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/audio" android:layout_weight="1.0" />
        <Button android:id="@id/btnLight" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/list_light" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <Button android:id="@id/btnVibrate" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/vibrate" android:layout_weight="1.0" />
        <Button android:id="@id/btnSensors" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/sensors" android:layout_weight="1.0" />
        <Button android:id="@id/btnTouchScreen" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/touchsrceen" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <Button android:id="@id/btnCamera" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/camera" android:layout_weight="1.0" />
        <Button android:id="@id/btnNand" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/subCamera" android:layout_weight="1.0" />
        <Button android:id="@id/btnSDcard" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/sdcard" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <Button android:id="@id/btnKeystroke" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/keystroke" android:layout_weight="1.0" />
        <Button android:id="@id/btnSimStatus" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/sim_card" android:layout_weight="1.0" />
        <Button android:id="@id/btnGongxu" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/gongxujiancha" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <Button android:id="@id/btnFlashLight" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/flash_lisht" android:layout_weight="1.0" />
        <Button android:textColor="#ff0000ff" android:id="@id/btnFMTest" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/FMtest" android:layout_weight="1.0" />
        <Button android:textColor="#ff0000ff" android:id="@id/btnAutoTest" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/autotest" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>