<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0dip" android:id="@id/tv_speak_times" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/speak_playtimes" />
    <EditText android:id="@id/speak_playtime" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/speak_default_playtime" android:numeric="integer" android:layout_below="@id/tv_speak_times" />
    <TextView android:textSize="18.0dip" android:id="@id/tv_speak_spear" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/speak_speartimes" android:layout_below="@id/speak_playtime" />
    <EditText android:id="@id/speak_speartime" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/speak_default_speartime" android:numeric="integer" android:layout_below="@id/tv_speak_spear" />
    <Button android:gravity="center" android:id="@id/bt_speak_ok" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/bt_speak_ok" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
</RelativeLayout>