<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/batteryPower" />
    <TextView android:textSize="18.0sp" android:id="@id/tv_battery" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="20.0dip" />
    <TextView android:textSize="18.0sp" android:id="@id/battery_state" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/batteryState" />
    <TextView android:textSize="18.0sp" android:id="@id/tv_battery_status" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="40.0dip" />
    <TextView android:textSize="18.0sp" android:id="@id/duol_battery_info" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/battery_info" />
    <TextView android:textSize="18.0sp" android:id="@id/duol_battery_infotext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" />
    <LinearLayout android:orientation="horizontal" android:id="@id/doul_control" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/duol_battery_infotext">
        <Button android:id="@id/auto_battery" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_auto" android:layout_weight="1.0" />
        <Button android:id="@id/battery_a" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_a" android:layout_weight="1.0" />
        <Button android:id="@id/battery_b" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_b" android:layout_weight="1.0" />
    </LinearLayout>
    <include layout="@layout/model_bt_relative" />
</LinearLayout>