<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:id="@id/softwareVersion" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phoneInfo_softwareVersion" />
    <TextView android:textSize="20.0dip" android:id="@id/softwareVersionText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" />
    <TextView android:textSize="20.0dip" android:id="@id/sn_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/bt_ft" />
    <TextView android:textSize="20.0dip" android:id="@id/sn_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" />
    <TextView android:textSize="20.0dip" android:id="@id/build_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/build_type" />
    <TextView android:textSize="20.0dip" android:id="@id/build_type_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" />
    <TextView android:textSize="20.0dip" android:id="@id/haedware_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/phoneInfo_hardwareVersion" />
    <TextView android:textSize="20.0dip" android:id="@id/haedware_version_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" />
</LinearLayout>